--- a/templates/Article/add.html.twig
+++ b/templates/Article/add.html.twig
@@ -14,6 +14,13 @@
             <option>Léo</option>
             <option >Aegir</option>
         </select>
+        <select name="Libelle">
+            <option >BD</option>
+            <option >Romans</option>
+            <option >Mangas</option>
+            <option>Dictionnaires</option>
+            <option >Périodiques</option>
+        </select>
         <input type="submit" value="Enregistrer les modifications">
     </form>
 
