--- a/templates/Article/show.html.twig
+++ b/templates/Article/show.html.twig
@@ -5,6 +5,8 @@
     <p>{{ article.Titre }}</p>
     <p>{{ article.Description }}</p>
     <p>{{ article.Auteur }}</p>
+    <p>{{ categorie.Libelle }}</p>
+    <p>{{ categorie.Icone }}</p>
     <p><a href="/article/update/{{ article.Id }}"> Modifier ce super Article </a></p>
     <p><a href="/article/delete/{{ article.Id }}"> Supprimer ce super Article </a></p>
 {% endblock %}
